--- a/WeatherApplication/WeatherApplication/Base.lproj/Main.storyboard
+++ b/WeatherApplication/WeatherApplication/Base.lproj/Main.storyboard
@@ -76,11 +76,17 @@
                                 <rect key="frame" x="16" y="629" width="160" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Facebook"/>
+                                <connections>
+                                    <action selector="facbookButtonPushedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3LN-vd-JFa"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="499-wt-jgL">
                                 <rect key="frame" x="199" y="629" width="160" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Twitter"/>
+                                <connections>
+                                    <action selector="twitterButtonPushedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XBG-Ne-EsN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
