--- a/WeatherApplication/WeatherApplication/Base.lproj/Main.storyboard
+++ b/WeatherApplication/WeatherApplication/Base.lproj/Main.storyboard
@@ -32,9 +32,9 @@
                                 <rect key="frame" x="90" y="122" width="194" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <state key="normal" title="currentLocation"/>
+                                <state key="normal" title="loading..."/>
                                 <connections>
-                                    <segue destination="deV-3K-hxi" kind="show" id="l22-ay-8Sp"/>
+                                    <segue destination="deV-3K-hxi" kind="show" identifier="showMapView" id="l22-ay-8Sp"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="welcomeText" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5dW-1n-cp1">
@@ -239,12 +239,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PnA-rc-jEi">
-                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lTF-oi-sPn">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" showsUserLocation="YES" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lTF-oi-sPn">
                                 <rect key="frame" x="0.0" y="155" width="375" height="466"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
@@ -265,15 +260,35 @@
                                     <action selector="segmentChanged:" destination="deV-3K-hxi" eventType="valueChanged" id="x3Y-lD-eDq"/>
                                 </connections>
                             </segmentedControl>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oO0-op-YXT">
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="deV-3K-hxi" id="s1v-z6-2rb"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="mapTypeController" destination="WVE-Tl-gAu" id="r8C-Wm-7Ho"/>
                         <outlet property="mapView" destination="lTF-oi-sPn" id="oOp-ub-bRo"/>
+                        <outlet property="searchDisplayController" destination="LKy-M8-7xF" id="NLR-f8-sDl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D0L-KB-oTn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="LKy-M8-7xF">
+                    <connections>
+                        <outlet property="delegate" destination="deV-3K-hxi" id="9FU-cZ-CR0"/>
+                        <outlet property="searchBar" destination="oO0-op-YXT" id="kXV-ZQ-67i"/>
+                        <outlet property="searchContentsController" destination="deV-3K-hxi" id="BiG-0p-OnM"/>
+                        <outlet property="searchResultsDataSource" destination="deV-3K-hxi" id="SX5-qw-6ox"/>
+                        <outlet property="searchResultsDelegate" destination="deV-3K-hxi" id="273-b4-dps"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="2005.5999999999999" y="884.70764617691157"/>
         </scene>
