--- a/WeatherApplication/WeatherApplication/Base.lproj/Main.storyboard
+++ b/WeatherApplication/WeatherApplication/Base.lproj/Main.storyboard
@@ -144,7 +144,7 @@
             </objects>
             <point key="canvasLocation" x="1056.8" y="123.68815592203899"/>
         </scene>
-        <!--Profile View Controller-->
+        <!--Profile-->
         <scene sceneID="IG3-rT-odw">
             <objects>
                 <viewController id="u5Q-qt-Uvm" customClass="ProfileViewController" customModule="WeatherApplication" customModuleProvider="target" sceneMemberID="viewController">
@@ -170,7 +170,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Profile Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGs-Pi-kHT">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGs-Pi-kHT">
                                 <rect key="frame" x="16" y="72" width="343" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
@@ -217,6 +217,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Profile" id="hOM-B8-c9j"/>
                     <connections>
                         <outlet property="homelocationField" destination="Dc5-AZ-eF5" id="Gtd-pe-zkK"/>
                         <outlet property="previewAmountField" destination="pxa-sP-rYw" id="o25-3h-y7e"/>
@@ -227,7 +228,7 @@
             </objects>
             <point key="canvasLocation" x="2005.5999999999999" y="123.68815592203899"/>
         </scene>
-        <!--Map View Controller-->
+        <!--Change Location-->
         <scene sceneID="pdn-gT-ueB">
             <objects>
                 <viewController id="deV-3K-hxi" customClass="MapViewController" customModule="WeatherApplication" customModuleProvider="target" sceneMemberID="viewController">
@@ -240,16 +241,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" showsUserLocation="YES" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lTF-oi-sPn">
-                                <rect key="frame" x="0.0" y="155" width="375" height="466"/>
+                                <rect key="frame" x="0.0" y="108" width="375" height="507"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="biS-JM-C6h">
-                                <rect key="frame" x="16" y="629" width="343" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Select as Location"/>
-                            </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="WVE-Tl-gAu">
-                                <rect key="frame" x="0.0" y="119" width="375" height="29"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="Standard"/>
@@ -260,18 +256,25 @@
                                     <action selector="segmentChanged:" destination="deV-3K-hxi" eventType="valueChanged" id="x3Y-lD-eDq"/>
                                 </connections>
                             </segmentedControl>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oO0-op-YXT">
-                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="biS-JM-C6h">
+                                <rect key="frame" x="16" y="623" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Set as Location"/>
                                 <connections>
-                                    <outlet property="delegate" destination="deV-3K-hxi" id="s1v-z6-2rb"/>
+                                    <action selector="setAsLocation:" destination="deV-3K-hxi" eventType="touchUpInside" id="Hsp-5e-a7f"/>
                                 </connections>
-                            </searchBar>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Change Location" id="8lJ-OI-JFb">
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="hwe-fl-M7Z">
+                            <connections>
+                                <action selector="searchButton:" destination="deV-3K-hxi" id="rqz-gZ-man"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="mapTypeController" destination="WVE-Tl-gAu" id="r8C-Wm-7Ho"/>
@@ -283,7 +286,6 @@
                 <searchDisplayController id="LKy-M8-7xF">
                     <connections>
                         <outlet property="delegate" destination="deV-3K-hxi" id="9FU-cZ-CR0"/>
-                        <outlet property="searchBar" destination="oO0-op-YXT" id="kXV-ZQ-67i"/>
                         <outlet property="searchContentsController" destination="deV-3K-hxi" id="BiG-0p-OnM"/>
                         <outlet property="searchResultsDataSource" destination="deV-3K-hxi" id="SX5-qw-6ox"/>
                         <outlet property="searchResultsDelegate" destination="deV-3K-hxi" id="273-b4-dps"/>
